# LennyVerse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TODOS.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build-and-deploy.yml
backend/app/: main.py
data/migrations/: 001_playbook_shares.sql
docs/: data-foundation-layer-design.md  knowledge-galaxy-runbook.md  prd.md
docs/plans/: 2026-03-20-chunking-embedding-rewrite-design.md  2026-03-20-data-foundation-implementation-plan.md  2026-03-20-data-foundation-layer-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
ingest/: __init__.py  __main__.py  cli.py  embedder.py  extractor.py  neo4j_projector.py  pipeline.py  supabase_loader.py
lennys-newsletterpodcastdata/: LICENSE.md  README.md  index.json
lennys-newsletterpodcastdata/newsletters/: a-guide-to-ai-prototyping-for-product-managers.md  an-ai-glossary.md  beyond-vibe-checks-a-pms-complete-guide-to-evals.md  essential-reading-for-product-builders-part-1.md  everyone-should-be-using-claude-code-more.md  how-duolingo-reignited-user-growth.md  how-to-build-your-pm-second-brain-with-chatgpt.md  product-manager-is-an-unfair-role-so-work-unfairly.md  state-of-the-product-job-market-in-2025.md  (+1 more)
migrations/: 002_embedding_dimension_1024.sql  002_embedding_dimension_768.sql
tests/: test_backend_graph_api.py  test_chunker.py  test_cors_configuration.py  test_graph.py  test_ingest_cli_rebuild_graph.py  test_ingest_extractor.py  test_ingest_pipeline.py  test_neo4j_projector.py  test_parser.py  test_summarize_config.py  test_summarize_db.py  test_summarize_script.py  test_summarizer.py
(+161 files in other folders)
