[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lennyverse-ingestion"
version = "0.1.0"
description = "Local manual ingestion pipeline for LennyVerse foundation data."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.68.0",
    "supabase>=2.28.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ingest"]
